@@ -76,7 +76,7 @@ void sheet_style_shutdown (Sheet *sheet);
 void      sheet_style_set_auto_pattern_color (Sheet  *sheet,
 					      GnmColor *grid_color);
 GnmColor *sheet_style_get_auto_pattern_color (Sheet const *sheet);
-void      sheet_style_update_grid_color      (Sheet const *sheet);
+void      sheet_style_update_grid_color      (Sheet const *sheet, GtkStyleContext *context);
 
 GnmStyle const    *style_list_get_style	 (GnmStyleList const *l, int col, int row);
 void		   style_list_free	 (GnmStyleList *l);
